# shuttle-hello-world

./: .gitignore  Cargo.toml  Secrets.toml  Shuttle.toml
migrations/: schema.sql
my_crate/src/: lib.rs
not_member_crate/: Cargo.toml
not_member_crate/src/: lib.rs
src/: main.rs
