[package]
name = "shuttle_project"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["my_crate"]
exclude = ["not_member_crate"]
# members = ["my_crate", "not_member_crate"]


[dependencies]
my_crate = { path = "./my_crate"}
shuttle-runtime = "0.14.0"
axum = "0.6.16"
shuttle-axum = "0.14.0"
tokio = "1.27.0"
shuttle-shared-db = { version = "0.14.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tower-http = { version = "^0.4", features = ["fs"]}
shuttle-static-folder = "0.14.0"